--- a/template/chat/roll.html
+++ b/template/chat/roll.html
@@ -88,7 +88,7 @@
                 </p>
             </div>
             {{#unless damage.hidePenetration}}
-                <p><strong>{{localize "CHAT.PENETRATION"}}:</strong> <span class="damage-penetration">{{penetration}}</span></p>
+                <p><strong>{{localize "CHAT.PENETRATION"}}:</strong> <span class="damage-penetration">{{damage.penetration}}</span></p>
             {{/unless}}
             {{#if damage.righteousFury}}
                 <p><strong>{{localize "CHAT.RIGHTEOUS_FURY"}}:</strong> <span class="damage-righteous-fury">{{damage.righteousFury}}</span></p>
